--- a/awse/templates/awse/load_blocks/covid.html
+++ b/awse/templates/awse/load_blocks/covid.html
@@ -6,24 +6,44 @@
             <div id="{{ covid_block_ukraine }}" style="float: left; ">
                 {% with script_id=64|get_random_string title=64|get_random_string %}
                 <label id="{{ title }}" class="username"></label><br>
-                <script id="{{ script_id }}">$("#{{ title }}").text("COVID-19 statistics in Ukraine");$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    $("#{{ title }}").text("COVID-19 statistics in Ukraine");
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
                 {% with covid_block=48|get_random_string %}
                 <label id="{{ covid_block }}" class="city"><br/></label>
                     {% with script_id=64|get_random_string patients=12|get_random_string recovered=12|get_random_string lethal=12|get_random_string tested=12|get_random_string data_date=12|get_random_string %}
-                    <script id="{{ script_id }}">let x{{ patients }}="{{ covid_ua.0 }} (+{{ covid_ua.1 }})";let x{{ recovered }}="{{ covid_ua.2 }}";let x{{ lethal }}="{{ covid_ua.3 }}";let x{{ tested }}="{{ covid_ua.4 }}";let x{{ data_date }}="{{ covid_ua.5 }}";$("#{{ covid_block }}").html("<br/><h6>😷Patients with Covid-19: <b>"+x{{ patients }}+"</b></h6><h6>❤️Recovered: <b>"+x{{ recovered }}+"</b></h6><h6>💔Lethal outcomes: <b>"+x{{ lethal }}+"</b></h6><h6>📝Tested: <b>"+x{{ tested }}+"</b></h6><br/><h6>📅<b>"+x{{ data_date }}+"</b></h6>");$("#{{ script_id }}").remove()</script>
+                    <script id="{{ script_id }}">
+                        let x{{ patients }}="{{ covid_ua.0|encode_eng }} (+{{ covid_ua.1|encode_eng }})";
+                        let x{{ recovered }}="{{ covid_ua.2|encode_eng }}";
+                        let x{{ lethal }}="{{ covid_ua.3|encode_eng }}";
+                        let x{{ tested }}="{{ covid_ua.4|encode_eng }}";
+                        let x{{ data_date }}="{{ covid_ua.5|encode_eng }}";
+                        $("#{{ covid_block }}").html("<br/><h6>😷Patients with Covid-19: <b>"+UpBDecode(x{{ patients }})+"</b></h6><h6>❤️Recovered: <b>"+UpBDecode(x{{ recovered }})+"</b></h6><h6>💔Lethal outcomes: <b>"+UpBDecode(x{{ lethal }})+"</b></h6><h6>📝Tested: <b>"+UpBDecode(x{{ tested }})+"</b></h6><br/><h6>📅<b>"+UpBDecode(x{{ data_date }})+"</b></h6>");
+                        $("#{{ script_id }}").remove()
+                    </script>
                     {% endwith %}
                 {% endwith %}
                 <br/>
                 {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
                 <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
-                <script id="{{ script_id }}">let x{{ title_badge }}="COVID-19&nbsp;";let x{{ icon_badge }}="fas fa-viruses";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ title_badge }}="{{ 'COVID-19&nbsp;'|encode_eng }}";
+                    let x{{ icon_badge }}="{{ 'fas fa-viruses'|encode_eng }}";
+                    $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+UpBDecode(x{{ title_badge }})+"<i class=\""+UpBDecode(x{{ icon_badge }})+"\"></i></span>");
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
                 {% with script_id=64|get_random_string telegram_share_link=48|get_random_string let_id=12|get_random_string %}
                 <a id="{{ telegram_share_link }}" href="" class="telegram_share select_disable_text" target="_blank" title="Share in Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 Share </a>
-                <script id="{{ script_id }}">let x{{ let_id }}="{{ 16|get_random_string }}";$("#{{ telegram_share_link }}").attr("href", `tg://msg_url?url=${encodeURIComponent(window.location.href)}&text=${encodeURIComponent("\n"+$("#{{ covid_block_ukraine }}").children(".city").text().replaceAll('\n', '%0A'))}&id=`+x{{ let_id }});$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ let_id }}="{{ 16|get_random_string }}";
+                    $("#{{ telegram_share_link }}").attr("href", `tg://msg_url?url=${encodeURIComponent(window.location.href)}&text=${encodeURIComponent("\n"+$("#{{ covid_block_ukraine }}").children(".city").text().replaceAll('\n', '%0A'))}&id=`+x{{ let_id }});
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
             </div>
             {% endwith %}
@@ -37,24 +57,44 @@
             <div id="{{ covid_block_russia }}" style="float: left; ">
                 {% with script_id=64|get_random_string title=64|get_random_string %}
                 <label id="{{ title }}" class="username"></label><br>
-                <script id="{{ script_id }}">$("#{{ title }}").text("COVID-19 statistics in Russia");$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    $("#{{ title }}").text("COVID-19 statistics in Russia");
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
                 {% with covid_block=48|get_random_string %}
                 <label id="{{ covid_block }}" class="city"></label>
                     {% with script_id=64|get_random_string patients=12|get_random_string recovered=12|get_random_string lethal=12|get_random_string tested=12|get_random_string data_date=12|get_random_string %}
-                    <script id="{{ script_id }}">let x{{ patients }}="{{ covid_ru.1 }} (+{{ covid_ru.2 }})";let x{{ recovered }}="{{ covid_ru.3 }}";let x{{ lethal }}="{{ covid_ru.4 }}";let x{{ tested }}="{{ covid_ru.0 }}";let x{{ data_date }}="{{ covid_ru.5 }}";$("#{{ covid_block }}").html("<br/><h6>😷Patients with Covid-19: <b>"+x{{ patients }}+"</b></h6><h6>❤️Recovered: <b>"+x{{ recovered }}+"</b></h6><h6>💔Lethal outcomes: <b>"+x{{ lethal }}+"</b></h6><h6>📝Tested: <b>"+x{{ tested }}+"</b></h6><br/><h6>📅<b>"+x{{ data_date }}+"</b></h6>");$("#{{ script_id }}").remove()</script>
+                    <script id="{{ script_id }}">
+                        let x{{ patients }}="{{ covid_ru.1|encode_eng }} (+{{ covid_ru.2|encode_eng }})";
+                        let x{{ recovered }}="{{ covid_ru.3|encode_eng }}";
+                        let x{{ lethal }}="{{ covid_ru.4|encode_eng }}";
+                        let x{{ tested }}="{{ covid_ru.0|encode_eng }}";
+                        let x{{ data_date }}="{{ covid_ru.5|encode_eng }}";
+                        $("#{{ covid_block }}").html("<br/><h6>😷Patients with Covid-19: <b>"+UpBDecode(x{{ patients }})+"</b></h6><h6>❤️Recovered: <b>"+UpBDecode(x{{ recovered }})+"</b></h6><h6>💔Lethal outcomes: <b>"+UpBDecode(x{{ lethal }})+"</b></h6><h6>📝Tested: <b>"+UpBDecode(x{{ tested }})+"</b></h6><br/><h6>📅<b>"+UpBDecode(x{{ data_date }})+"</b></h6>");
+                        $("#{{ script_id }}").remove()
+                    </script>
                     {% endwith %}
                 {% endwith %}
                 <br/>
                 {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
                 <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
-                <script id="{{ script_id }}">let x{{ title_badge }}="COVID-19&nbsp;";let x{{ icon_badge }}="fas fa-viruses";$("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ title_badge }}="{{ 'COVID-19&nbsp;'|encode_eng }}";
+                    let x{{ icon_badge }}="{{ 'fas fa-viruses'|encode_eng }}";
+                    $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+UpBDecode(x{{ title_badge }})+"<i class=\""+UpBDecode(x{{ icon_badge }})+"\"></i></span>");
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
                 {% with script_id=64|get_random_string telegram_share_link=48|get_random_string let_id=12|get_random_string %}
                 <a id="{{ telegram_share_link }}" href="" class="telegram_share select_disable_text" target="_blank" title="Share in Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 Share </a>
-                <script id="{{ script_id }}">let x{{ let_id }}="{{ 16|get_random_string }}";$("#{{ telegram_share_link }}").attr("href", `tg://msg_url?url=${encodeURIComponent(window.location.href)}&text=${encodeURIComponent("\n"+$("#{{ covid_block_russia }}").children(".city").text().replaceAll('\n', '%0A'))}&id=`+x{{ let_id }});$("#{{ script_id }}").remove()</script>
+                <script id="{{ script_id }}">
+                    let x{{ let_id }}="{{ 16|get_random_string }}";
+                    $("#{{ telegram_share_link }}").attr("href", `tg://msg_url?url=${encodeURIComponent(window.location.href)}&text=${encodeURIComponent("\n"+$("#{{ covid_block_russia }}").children(".city").text().replaceAll('\n', '%0A'))}&id=`+x{{ let_id }});
+                    $("#{{ script_id }}").remove()
+                </script>
                 {% endwith %}
             </div>
             {% endwith %}
